<resources>
    <string name="app_name">ScanCode</string>
    <string name="hello_world">Hello World</string>
    <string name="start_scan">开始扫描</string>
    <string name="confirm_order">确认订单</string>
    <string name="order_detail">订单详情</string>
    <string name="please_wait">请您稍候</string>
    <string name="wait_service">将有员工为您服务</string>
    <string name="ok">好的</string>
    <string name="success_buy">购买成功</string>
    <string name="welcome_again">欢迎再次光临</string>
    <string name="exit">退出</string>
    <string name="account_paid">已付款</string>
    <string name="goods_num">商品总数</string>
    <string name="store_title">"门店: "</string>
    <string name="order_number_title">"订单号: "</string>
    <string name="order_time_title">"付款时间: "</string>
    <string name="open_camera_permission">请至权限中心打开本应用的相机访问权限</string>
    <string name="android_auto_update_dialog_title">发现新版本</string>

    <string name="android_auto_update_notify_ticker">发现新版本,点击进行升级</string>
    <string name="android_auto_update_notify_content">发现新版本,点击进行升级</string>

    <string name="android_auto_update_dialog_btn_download">立即下载</string>
    <string name="android_auto_update_dialog_btn_cancel">以后再说</string>

    <string name="android_auto_update_toast_no_new_update">已经是最新版本</string>

    <string name="android_auto_update_download_progress">正在下载:%1$d%%</string>

    <string name="android_auto_update_dialog_checking">正在检查版本</string>
    <string name="network_error">网络出故障了，请稍后再试</string>
    <string name="scan_error">扫描失败</string>
</resources>
