<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:id="@+id/dialog_service_layout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@android:color/holo_orange_light"
                android:orientation="vertical"
                android:padding="20dp">

    <RelativeLayout
            android:id="@+id/titlelayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true">
        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:text="@string/please_wait"
                android:textColor="@android:color/white"
                android:textSize="18sp"/>

    </RelativeLayout>


    <LinearLayout
            android:id="@+id/service_detail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/titlelayout"
            android:layout_below="@+id/titlelayout"
            android:layout_centerInParent="true"
            android:layout_marginTop="20dp"
            android:orientation="vertical">

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/wait_service"
                android:textColor="@android:color/white"
                android:textSize="25sp" />
    </LinearLayout>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/service_detail"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:orientation="horizontal">

        <Button
                android:id="@+id/btn_ok"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/ok"
                android:textColor="@android:color/white"
                android:textSize="18sp"
                android:background="@drawable/shape_button"/>

    </LinearLayout>

</RelativeLayout>