<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:id="@+id/dialog_exit_layout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/shape_dialog_exit"
                android:orientation="vertical"
                android:padding="@dimen/x50">

    <RelativeLayout
            android:id="@+id/titlelayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_margin="@dimen/x30"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true">
        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:text="@string/success_buy"
                android:textColor="@android:color/white"
                android:textSize="@dimen/x40"/>

        <TextView
                android:id="@+id/tv_timer"
                android:gravity="center"
                android:background="@drawable/oval"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="3s"
                android:textColor="@android:color/white"
                android:layout_alignParentRight="true"/>

    </RelativeLayout>


    <LinearLayout
            android:id="@+id/service_detail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/titlelayout"
            android:layout_below="@+id/titlelayout"
            android:layout_centerInParent="true"
            android:gravity="center"
            android:layout_marginTop="@dimen/x50"
            android:orientation="vertical">

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/welcome_again"
                android:textColor="@android:color/white"
                android:textSize="@dimen/x50"/>
    </LinearLayout>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/service_detail"
            android:layout_marginTop="@dimen/x80"
            android:layout_marginBottom="@dimen/x20"
            android:gravity="center"
            android:weightSum="2"
            android:orientation="horizontal">

        <Button
                android:id="@+id/btn_exit"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.4"
                android:layout_gravity="center"
                android:text="@string/exit"
                android:textColor="@android:color/white"
                android:textSize="@dimen/x40"
                android:background="@drawable/shape_button"/>

    </LinearLayout>

</RelativeLayout>